k8s/namespaces/llm/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: llm
  labels:
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: comfyui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: comfyui
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: nvidia
      containers:
        - name: comfyui
        # renovate: datasource=docker depName=docker.io/yanwk/comfyui-boot
          image: docker.io/yanwk/comfyui-boot:cu129-slim-20250901@sha256:47ec608e67fa8cb7e5dc2fb90947e9a9bad8b232132d595ee3a4571a44b2eb1e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8188
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /root
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
              nvidia.com/gpu: "1"
            limits:
              cpu: "2"
              memory: "4Gi"
              nvidia.com/gpu: "1"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: comfyui-config
